# monorepo

./: .dockerignore  .gitignore  Makefile  README.md  docker-compose.apps.prod.yaml  docker-compose.apps.yaml  docker-compose.monitoring.yaml  docker-compose.pipeline.yaml  docker-compose.yml  otel-collector-config.yaml
services/device-selection/: Dockerfile  README.md  config.main-pipeline.toml  config.toml  pyproject.toml
services/device-selection/evaluation/: catalog_forced_multihub copy.json  catalog_forced_multihub.json  catalog_multieco.json  catalog_multihub.json  catalog_natural_5pt.json  catalog_synth_001.json  catalog_synth_002.json  catalog_synth_003.json  catalog_synth_004.json  catalog_synth_005.json  catalog_synth_matter_bridge.json  real_catalog.json  test_001_synth_basic_wifi_only.json  test_real_001_starter_kit.json  test_real_002_full_home.json  test_real_003_tight_budget.json  test_real_004_security_focus.json  test_real_005_gas_safety.json  test_synth_002_zigbee_needs_hub.json  test_synth_003_bridge_required.json  test_synth_004_tight_budget.json  test_synth_005_heuristic_gap_heterogeneous.json  test_synth_006_medium.json  test_synth_007_heavy.json  test_synth_008.json  test_synth_009_tight_gap.json  test_synth_010_multihub_pareto.json  test_synth_010v2_forced_hubs.json  test_synth_011_multihub_tight.json  test_synth_012_forced_hubs_heavy.json  test_synth_013_many_reqs.json  test_synth_014_natural_5pt.json  test_synth_014b_natural_5pt_heavy.json  test_synth_015_matter_bridge.json
services/device-selection/proto/: iot_opt.proto
services/device-selection/src/device_selection/: cli.py  config.py
services/device-selection/src/device_selection/core/: metrics.py  model.py  objectives.py  pareto.py  pathfinding.py  quality.py  validate.py
services/device-selection/src/device_selection/data/: catalog.py  export.py  json_loader.py  loader.py  result_exporter.py
services/device-selection/src/device_selection/proto/: iot_opt_pb2.py  iot_opt_pb2.pyi
services/device-selection/src/device_selection/solvers/: brute_force.py  enum_repair.py  greedy.py
services/device-selection/src/device_selection/temporal/: activities.py  codec.py  observability.py  worker.py
services/device-selection/src/iot_device_selection/: cli.py
services/device-selection/src/iot_device_selection/core/: pareto.py  validate.py
services/device-selection/src/iot_device_selection/data/: catalog.py  loader.py  result_exporter.py
services/device-selection/src/iot_device_selection/solvers/: enum_repair.py
services/device-selection/tests/core/: test_pathfinding.py  test_validation.py
services/device-selection/tests/data/: test_catalog.py
services/device-selection/tests/solvers/: test_brute_force.py  test_enum_repair.py
services/device-selection/tests/temporal/: test_worker.py
services/extractor/: Dockerfile  README.md  config.toml  parsed_listing_lamp.json  parsed_listing_sensor.json  pyproject.toml  taxonomy_schema.json  water_leak_sensor.json
services/extractor/evaluation/: listings.json
services/extractor/evaluation/results/: reference.json
services/extractor/internal/cli/: run.go
services/extractor/internal/scrapers/printer/: printer.go
services/extractor/internal/worker/: worker.go
services/extractor/src/extractor/: cli.py  config.py  enrichment.py  logging_config.py  telemetry.py
services/extractor/src/extractor/adapters/: default_pre_llm_gate.py  llm_factory.py  outlines_extractor.py  postgres_repository.py  stub_catalog_reader.py
services/extractor/src/extractor/domain/: gate.py  models.py
services/extractor/src/extractor/evaluation/: evaluate.py  metrics.py
services/extractor/src/extractor/ports/: catalog_reader.py  extraction.py  pre_llm_gate.py  repository.py
services/extractor/src/extractor/worker/: worker.py
services/extractor/tests/: conftest.py  test_config.py  test_enrichment.py
services/extractor/tests/integration/: test_postgres_repository.py
services/power_planner/: .dockerignore  CMakeLists.txt  Dockerfile  README.md
services/power_planner/include/power_planner/model/: connection.hpp  device.hpp  planner_input.hpp  planner_request.hpp  power_source.hpp  run_options.hpp
services/power_planner/include/power_planner/service/: battery_calculator.hpp  battery_report.hpp  power_assignment.hpp  power_calculator.hpp  power_report.hpp  request_loader.hpp  result_writer.hpp
services/power_planner/src/: main.cpp
services/power_planner/src/service/: battery_calculator.cpp  power_assignment.cpp  power_calculator.cpp  request_loader.cpp  result_writer.cpp
services/power_planner/tests/: battery_calculator_test.cpp  power_assignment_test.cpp  power_calculator_test.cpp  request_loader_test.cpp  result_writer_test.cpp
services/quality-calculator/: .gitignore  Dockerfile  README.md  config.toml  evaluator.py  main.py  overall_labels.csv  pyproject.toml  spec_labels.csv  tests.py  trained.json  validate_schemas.py
services/quality-calculator/config/: evaluation_traits.json  ground_truth_rubric.json
services/quality-calculator/config/strategies/: full.json  reputation_bayes.json  reputation_only.json  specs_only.json
services/quality-calculator/config/strategies/specs/: authority_aligned.json  baseline.json  flat.json  trained.json
services/quality-calculator/docs/: README_analysis.md  README_eval.md  quality_model.md
services/quality-calculator/evaluation/: catalog.json  spec_labels_template.csv
services/quality-calculator/evaluation/results/: 20260530_131413_evaluation.json
services/quality-calculator/scripts/: analysis.py  check_taxonomy_sync.py  make_labeling_template.py  validate_schemas.py
services/quality-calculator/src/quality-calculator/: cli.py
services/quality-calculator/src/quality_calculator/: cli.py  config.py  evaluator.py
services/quality-calculator/src/quality_calculator/adapters/: postgres_repository.py
services/quality-calculator/tests/: conftest.py  test_evaluator.py  test_spec_tuning.py  test_train_weights.py
services/quality-calculator/tests/integration/: test_postgres_repository.py
(+779 files in other folders)
