[project]
name = "device-selection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "outlines>=1.2.12",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pymoo>=0.6.1.6",
    "structlog>=25.5.0",
    "tomli>=2.4.0",
    "typer>=0.24.1",
]

[project.scripts]
device-selection = "device_selection.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/device_selection"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8.0",
]
